--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -132,6 +132,15 @@
    "source": [
     "cosa2=\"Otra cosilla\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosa3= 'Una cosailla mas'"
+   ]
   }
  ],
  "metadata": {
