--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"4\">**1.** Importamos los archivos y cargamos las librerías</font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,15 +18,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('hello World')"
    ]
   },
   {
@@ -35,8 +34,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"4\">**2.** Exploramos 'm_clientes'</font>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -60,68 +67,119 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Sku</th>\n",
-       "      <th>Sku_Description</th>\n",
-       "      <th>Sku_Category</th>\n",
-       "      <th>Sku_Subcategory</th>\n",
+       "      <th>NUM TDA</th>\n",
+       "      <th>NOMBRE DE TDA</th>\n",
+       "      <th>CADENA</th>\n",
+       "      <th>FORMATO</th>\n",
+       "      <th>MUNICIPIO/CIUDAD</th>\n",
+       "      <th>ESTADO</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>DEPOSITO / DISTRIBUIDOR</th>\n",
+       "      <th>ESTRUCTURA</th>\n",
+       "      <th>GRADO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11058</td>\n",
-       "      <td>Frosted Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bloody Sea Green BookShop</td>\n",
+       "      <td>proveedor_1</td>\n",
+       "      <td>Shop</td>\n",
+       "      <td>Bizarre White Shop</td>\n",
+       "      <td>Coalmar</td>\n",
+       "      <td>SURESTE</td>\n",
+       "      <td>Mogulval Corp.</td>\n",
+       "      <td>DISTRIBUIDORES</td>\n",
+       "      <td>VI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29207</td>\n",
-       "      <td>Nut Cheerios Mango</td>\n",
-       "      <td>Super-flavour</td>\n",
-       "      <td>Cereal box</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Funny Sky Blue GipsyTrade</td>\n",
+       "      <td>proveedor_1</td>\n",
+       "      <td>Shop</td>\n",
+       "      <td>Bizarre White Shop</td>\n",
+       "      <td>Coalmar</td>\n",
+       "      <td>SURESTE</td>\n",
+       "      <td>Mogulval Corp.</td>\n",
+       "      <td>DISTRIBUIDORES</td>\n",
+       "      <td>VI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>38379</td>\n",
-       "      <td>MultiGrain Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Rare Green Laundrette</td>\n",
+       "      <td>proveedor_1</td>\n",
+       "      <td>Shop</td>\n",
+       "      <td>Rare Orange Applepie</td>\n",
+       "      <td>Coalmar</td>\n",
+       "      <td>SURESTE</td>\n",
+       "      <td>Eioval Aerospace</td>\n",
+       "      <td>FORANEO</td>\n",
+       "      <td>VI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>42671</td>\n",
-       "      <td>Crunch Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Angry Indigo Center</td>\n",
+       "      <td>proveedor_1</td>\n",
+       "      <td>Shop</td>\n",
+       "      <td>Rare Orange Applepie</td>\n",
+       "      <td>Coalmar</td>\n",
+       "      <td>SURESTE</td>\n",
+       "      <td>Eioval Aerospace</td>\n",
+       "      <td>FORANEO</td>\n",
+       "      <td>VI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>54644</td>\n",
-       "      <td>Corn Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Tall Violet Deli</td>\n",
+       "      <td>proveedor_1</td>\n",
+       "      <td>Shop</td>\n",
+       "      <td>Rare Orange Applepie</td>\n",
+       "      <td>Coalmar</td>\n",
+       "      <td>SURESTE</td>\n",
+       "      <td>Eioval Aerospace</td>\n",
+       "      <td>FORANEO</td>\n",
+       "      <td>VI</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Sku      Sku_Description   Sku_Category Sku_Subcategory\n",
-       "0  11058       Frosted Mango      Sugar-free     Cereal bars\n",
-       "1  29207  Nut Cheerios Mango   Super-flavour      Cereal box\n",
-       "2  38379    MultiGrain Mango      Sugar-free     Cereal bars\n",
-       "3  42671        Crunch Mango      Sugar-free     Cereal bars\n",
-       "4  54644          Corn Mango      Sugar-free     Cereal bars"
+       "   NUM TDA              NOMBRE DE TDA       CADENA FORMATO   \n",
+       "0        2  Bloody Sea Green BookShop  proveedor_1    Shop  \\\n",
+       "1        4  Funny Sky Blue GipsyTrade  proveedor_1    Shop   \n",
+       "2        5      Rare Green Laundrette  proveedor_1    Shop   \n",
+       "3        6        Angry Indigo Center  proveedor_1    Shop   \n",
+       "4        7           Tall Violet Deli  proveedor_1    Shop   \n",
+       "\n",
+       "       MUNICIPIO/CIUDAD   ESTADO DIVISION DEPOSITO / DISTRIBUIDOR   \n",
+       "0    Bizarre White Shop  Coalmar  SURESTE          Mogulval Corp.  \\\n",
+       "1    Bizarre White Shop  Coalmar  SURESTE          Mogulval Corp.   \n",
+       "2  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
+       "3  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
+       "4  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
+       "\n",
+       "       ESTRUCTURA GRADO  \n",
+       "0  DISTRIBUIDORES    VI  \n",
+       "1  DISTRIBUIDORES    VI  \n",
+       "2         FORANEO    VI  \n",
+       "3         FORANEO    VI  \n",
+       "4         FORANEO    VI  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m_productos.head()"
+    "#Exploramos clientes\n",
+    "m_clientes.head(5)"
    ]
   },
   {
@@ -130,7 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosa2=\"Otra cosilla\""
+    "#Observamos que hay 4 identificadores repetidos: 2568, 143, 240 y 58\n",
+    "counts = m_clientes['NUM TDA'].value_counts()\n",
+    "repeated_values = counts[counts > 1]\n",
+    "print(repeated_values)\n",
+    "#Pero comprobamos esos valores y vemos que, \n",
+    "# pese a que su numero de identificacion coincide, hay diferencias entre las tiendas.\n",
+    "lista_valores = [2568, 143, 240, 58]\n",
+    "condicion = m_clientes['NUM TDA'].isin(lista_valores)\n",
+    "m_clientes[condicion].sort_values('NUM TDA')"
    ]
   },
   {
@@ -139,7 +205,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosa3= 'Una cosailla mas'"
+    "conteo_nombres = m_clientes['NOMBRE DE TDA'].value_counts()\n",
+    "\n",
+    "# Vemos que la mayoría aparecen solo una vez\n",
+    "fig, ax = plt.subplots()\n",
+    "conteo.plot.bar(ax=ax)\n",
+    "ax.set_xlabel('Nombre de la TDA')\n",
+    "ax.set_ylabel('Conteo')\n",
+    "ax.set_title('Conteo de apariciones por TDA')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CADENA\n",
+       "proveedor_2    2215\n",
+       "proveedor_1     237\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conteo_cadena = m_clientes['CADENA'].value_counts()\n",
+    "conteo_cadena"
    ]
   },
   {
@@ -147,9 +245,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "asasdasssss"
-   ]
+   "source": []
   }
  ],
  "metadata": {
