--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,140 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NUM TDA</th>\n",
-       "      <th>NOMBRE DE TDA</th>\n",
-       "      <th>CADENA</th>\n",
-       "      <th>FORMATO</th>\n",
-       "      <th>MUNICIPIO/CIUDAD</th>\n",
-       "      <th>ESTADO</th>\n",
-       "      <th>DIVISION</th>\n",
-       "      <th>DEPOSITO / DISTRIBUIDOR</th>\n",
-       "      <th>ESTRUCTURA</th>\n",
-       "      <th>GRADO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Bloody Sea Green BookShop</td>\n",
-       "      <td>proveedor_1</td>\n",
-       "      <td>Shop</td>\n",
-       "      <td>Bizarre White Shop</td>\n",
-       "      <td>Coalmar</td>\n",
-       "      <td>SURESTE</td>\n",
-       "      <td>Mogulval Corp.</td>\n",
-       "      <td>DISTRIBUIDORES</td>\n",
-       "      <td>VI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Funny Sky Blue GipsyTrade</td>\n",
-       "      <td>proveedor_1</td>\n",
-       "      <td>Shop</td>\n",
-       "      <td>Bizarre White Shop</td>\n",
-       "      <td>Coalmar</td>\n",
-       "      <td>SURESTE</td>\n",
-       "      <td>Mogulval Corp.</td>\n",
-       "      <td>DISTRIBUIDORES</td>\n",
-       "      <td>VI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Rare Green Laundrette</td>\n",
-       "      <td>proveedor_1</td>\n",
-       "      <td>Shop</td>\n",
-       "      <td>Rare Orange Applepie</td>\n",
-       "      <td>Coalmar</td>\n",
-       "      <td>SURESTE</td>\n",
-       "      <td>Eioval Aerospace</td>\n",
-       "      <td>FORANEO</td>\n",
-       "      <td>VI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Angry Indigo Center</td>\n",
-       "      <td>proveedor_1</td>\n",
-       "      <td>Shop</td>\n",
-       "      <td>Rare Orange Applepie</td>\n",
-       "      <td>Coalmar</td>\n",
-       "      <td>SURESTE</td>\n",
-       "      <td>Eioval Aerospace</td>\n",
-       "      <td>FORANEO</td>\n",
-       "      <td>VI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Tall Violet Deli</td>\n",
-       "      <td>proveedor_1</td>\n",
-       "      <td>Shop</td>\n",
-       "      <td>Rare Orange Applepie</td>\n",
-       "      <td>Coalmar</td>\n",
-       "      <td>SURESTE</td>\n",
-       "      <td>Eioval Aerospace</td>\n",
-       "      <td>FORANEO</td>\n",
-       "      <td>VI</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   NUM TDA              NOMBRE DE TDA       CADENA FORMATO   \n",
-       "0        2  Bloody Sea Green BookShop  proveedor_1    Shop  \\\n",
-       "1        4  Funny Sky Blue GipsyTrade  proveedor_1    Shop   \n",
-       "2        5      Rare Green Laundrette  proveedor_1    Shop   \n",
-       "3        6        Angry Indigo Center  proveedor_1    Shop   \n",
-       "4        7           Tall Violet Deli  proveedor_1    Shop   \n",
-       "\n",
-       "       MUNICIPIO/CIUDAD   ESTADO DIVISION DEPOSITO / DISTRIBUIDOR   \n",
-       "0    Bizarre White Shop  Coalmar  SURESTE          Mogulval Corp.  \\\n",
-       "1    Bizarre White Shop  Coalmar  SURESTE          Mogulval Corp.   \n",
-       "2  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
-       "3  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
-       "4  Rare Orange Applepie  Coalmar  SURESTE        Eioval Aerospace   \n",
-       "\n",
-       "       ESTRUCTURA GRADO  \n",
-       "0  DISTRIBUIDORES    VI  \n",
-       "1  DISTRIBUIDORES    VI  \n",
-       "2         FORANEO    VI  \n",
-       "3         FORANEO    VI  \n",
-       "4         FORANEO    VI  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Exploramos clientes\n",
     "m_clientes.head(5)"
@@ -218,26 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CADENA\n",
-       "proveedor_2    2215\n",
-       "proveedor_1     237\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Evaluemos el resto para ver qué valores contiene cada columna\n",
     "conteo_cadena = m_clientes['CADENA'].value_counts()\n",
-    "conteo_cadena"
+    "conteo_formato = m_clientes['FORMATO'].value_counts()\n",
+    "conteo_ciudad = m_clientes['MUNICIPIO/CIUDAD'].value_counts()\n",
+    "conteo_estado = m_clientes['ESTADO'].value_counts()\n",
+    "conteo_division = m_clientes['DIVISION'].value_counts()\n",
+    "conteo_distribuidor = m_clientes['DEPOSITO / DISTRIBUIDOR'].value_counts()\n",
+    "conteo_estructura = m_clientes['ESTRUCTURA'].value_counts()\n",
+    "conteo_grado = m_clientes['GRADO'].value_counts()\n",
+    "\n",
+    "print(\"Conteo de valores para 'CADENA':\")\n",
+    "print(conteo_cadena)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'FORMATO':\")\n",
+    "print(conteo_formato)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'MUNICIPIO/CIUDAD':\")\n",
+    "print(conteo_ciudad)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'ESTADO':\")\n",
+    "print(conteo_estado)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'DIVISION':\")\n",
+    "print(conteo_division)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'DEPOSITO / DISTRIBUIDOR':\")\n",
+    "print(conteo_distribuidor)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'ESTRUCTURA':\")\n",
+    "print(conteo_estructura)\n",
+    "\n",
+    "print(\"\\n Conteo de valores para 'GRADO':\")\n",
+    "print(conteo_grado)"
    ]
   },
   {
@@ -245,7 +131,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Por último, evaluemos si hay NaN\n",
+    "hay_na = m_clientes.isna().any()\n",
+    "print(hay_na)"
+   ]
   }
  ],
  "metadata": {
