cambio tarde 23 mayo 1

--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -122,7 +122,7 @@
     "print(\"\\n Conteo de valores para 'ESTRUCTURA':\")\n",
     "print(conteo_estructura)\n",
     "\n",
-    "print(\"\\n Conteo de valores para 'GRADO':\")\n",
+    "print(\"\\n CIPOTE GORDO:\")\n",
     "print(conteo_grado)"
    ]
   },
