cambios 24 mayo mañana

--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wqdqwdqwd\n",
     "\n",
     "print(\"\\n Conteo de valores para 'FORMATO':\")\n",
     "print(conteo_formato)\n",
@@ -143,92 +142,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sku</th>\n",
-       "      <th>Sku_Description</th>\n",
-       "      <th>Sku_Category</th>\n",
-       "      <th>Sku_Subcategory</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11058</td>\n",
-       "      <td>Frosted Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29207</td>\n",
-       "      <td>Nut Cheerios Mango</td>\n",
-       "      <td>Super-flavour</td>\n",
-       "      <td>Cereal box</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38379</td>\n",
-       "      <td>MultiGrain Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>42671</td>\n",
-       "      <td>Crunch Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>54644</td>\n",
-       "      <td>Corn Mango</td>\n",
-       "      <td>Sugar-free</td>\n",
-       "      <td>Cereal bars</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Sku      Sku_Description   Sku_Category Sku_Subcategory\n",
-       "0  11058       Frosted Mango      Sugar-free     Cereal bars\n",
-       "1  29207  Nut Cheerios Mango   Super-flavour      Cereal box\n",
-       "2  38379    MultiGrain Mango      Sugar-free     Cereal bars\n",
-       "3  42671        Crunch Mango      Sugar-free     Cereal bars\n",
-       "4  54644          Corn Mango      Sugar-free     Cereal bars"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Sku      Sku_Description   Sku_Category Sku_Subcategory\n",
+      "0  11058       Frosted Mango      Sugar-free     Cereal bars\n",
+      "1  29207  Nut Cheerios Mango   Super-flavour      Cereal box\n",
+      "2  38379    MultiGrain Mango      Sugar-free     Cereal bars\n",
+      "3  42671        Crunch Mango      Sugar-free     Cereal bars\n",
+      "4  54644          Corn Mango      Sugar-free     Cereal bars\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1242 entries, 0 to 1241\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   Sku              1242 non-null   int64 \n",
+      " 1   Sku_Description  1242 non-null   object\n",
+      " 2   Sku_Category     1242 non-null   object\n",
+      " 3   Sku_Subcategory  1242 non-null   object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 38.9+ KB\n",
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "m_productos.head()"
+    "print(m_productos.head())\n",
+    "print(m_productos.info())"
    ]
   },
   {
@@ -256,21 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False    1242\n",
-      "Name: count, dtype: int64\n"
+      "Sku_Description\n",
+      "Frosted Mango                       1\n",
+      "Frosted cherry                      1\n",
+      "Peanut Butter cherry                1\n",
+      "Sugar cherry                        1\n",
+      "Graham cherry                       1\n",
+      "                                   ..\n",
+      "Fruit & Bran Chocolate              1\n",
+      "Double Dip Crunch Chocolate         1\n",
+      "Crunchy Nut Cornflakes Chocolate    1\n",
+      "Crunchy Bran Chocolate              1\n",
+      "Gorilla Chilifest Chocolate         1\n",
+      "Name: count, Length: 1242, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "#Evaluemos si hay Duplicados\n",
-    "hay_na = m_productos.duplicated().value_counts()\n",
+    "hay_na = m_productos.Sku_Description.value_counts()\n",
     "print(hay_na)"
    ]
   },
@@ -321,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -329,13 +284,171 @@
      "output_type": "stream",
      "text": [
       "         Sku Sku_Description Sku_Category Sku_Subcategory\n",
+      "499  5007624       Corn Orio   Sugar-free      LECHES UHT\n",
+      "         Sku Sku_Description Sku_Category Sku_Subcategory\n",
       "499  5007624       Corn Orio   Sugar-free      LECHES UHT\n"
      ]
     }
    ],
    "source": [
     "condicion = m_productos['Sku_Subcategory'] == 'LECHES UHT'\n",
-    "print(m_productos[condicion])"
+    "print(m_productos[condicion])\n",
+    "condicion2 = m_productos['Sku'] == 5007624\n",
+    "print(m_productos[condicion2])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"4\">**3.** Exploramos 'sellin_total'</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4188783 entries, 0 to 4188782\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column    Dtype  \n",
+      "---  ------    -----  \n",
+      " 0   Sku       int64  \n",
+      " 1   Date      object \n",
+      " 2   Store_Id  int64  \n",
+      " 3   Pieces    float64\n",
+      " 4   Price     float64\n",
+      " 5   Margin    float64\n",
+      "dtypes: float64(3), int64(2), object(1)\n",
+      "memory usage: 191.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sellin_total.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sku</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Store_Id</th>\n",
+       "      <th>Pieces</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Margin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>02/01/2015</td>\n",
+       "      <td>100</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>13.01</td>\n",
+       "      <td>9.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>02/01/2015</td>\n",
+       "      <td>116</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>13.01</td>\n",
+       "      <td>9.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>02/01/2015</td>\n",
+       "      <td>141</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>13.01</td>\n",
+       "      <td>9.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>02/01/2015</td>\n",
+       "      <td>146</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>13.01</td>\n",
+       "      <td>9.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>02/01/2015</td>\n",
+       "      <td>151</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>13.09</td>\n",
+       "      <td>9.87</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sku        Date  Store_Id  Pieces  Price  Margin\n",
+       "0  4220015  02/01/2015       100    20.0  13.01    9.78\n",
+       "1  4220015  02/01/2015       116    20.0  13.01    9.78\n",
+       "2  4220015  02/01/2015       141    80.0  13.01    9.78\n",
+       "3  4220015  02/01/2015       146    10.0  13.01    9.78\n",
+       "4  4220015  02/01/2015       151    20.0  13.09    9.87"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sellin_total.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sku = sellin_total.Sku.value_counts()\n",
+    "date = sellin_total.Date.value_counts()\n",
+    "storeid = sellin_total.Store_Id.value_counts()\n",
+    "pieces = sellin_total.Pieces.value_counts()\n",
+    "price = sellin_total.Price.value_counts()\n",
+    "margin = sellin_total.Margin.value_counts()\n",
+    "print(sku, date, storeid, pieces, price, margin)"
    ]
   },
   {
