--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -438,17 +438,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sku\n",
+      "4381425    271548\n",
+      "4779537    256414\n",
+      "4442378    250666\n",
+      "4240039    245164\n",
+      "4769520    239512\n",
+      "4230022    227879\n",
+      "4351043    215167\n",
+      "4250046    207055\n",
+      "4554143    203715\n",
+      "4330800    200072\n",
+      "4789544    192238\n",
+      "4533931    172020\n",
+      "4523924    151961\n",
+      "4809797    147775\n",
+      "4361050    133646\n",
+      "4615034    132413\n",
+      "4665676    127974\n",
+      "4655669    109360\n",
+      "4220015     99834\n",
+      "4574433     97343\n",
+      "4819810     94454\n",
+      "4625287     76690\n",
+      "4543948     69335\n",
+      "4829827     52691\n",
+      "4432194     37545\n",
+      "4709131     36402\n",
+      "4422187     35836\n",
+      "4260053     31058\n",
+      "4697052     25974\n",
+      "4729193     18407\n",
+      "4675706     16782\n",
+      "4719179      5726\n",
+      "4749421      3210\n",
+      "4739414      2917\n",
+      "Name: count, dtype: int64,\n",
+      " \n",
+      " Date\n",
+      "13/12/2016    7860\n",
+      "02/05/2017    7598\n",
+      "03/11/2015    7557\n",
+      "17/11/2015    7503\n",
+      "18/04/2016    7495\n",
+      "              ... \n",
+      "25/03/2016     502\n",
+      "22/01/2017      51\n",
+      "04/09/2016      50\n",
+      "05/07/2015      29\n",
+      "14/02/2016      15\n",
+      "Name: count, Length: 757, dtype: int64, \n",
+      " \n",
+      " Store_Id\n",
+      "2345    9591\n",
+      "3897    8870\n",
+      "3846    8835\n",
+      "232     8730\n",
+      "2382    8631\n",
+      "        ... \n",
+      "2947       1\n",
+      "3746       1\n",
+      "3489       1\n",
+      "5425       1\n",
+      "2774       1\n",
+      "Name: count, Length: 1624, dtype: int64, \n",
+      " \n",
+      " Pieces\n",
+      "10.80       285110\n",
+      "6.75        197807\n",
+      "12.00       197727\n",
+      "24.00       193850\n",
+      "4.80        185424\n",
+      "             ...  \n",
+      "847.35           1\n",
+      "831.15           1\n",
+      "830.70           1\n",
+      "830.25           1\n",
+      "36000.00         1\n",
+      "Name: count, Length: 3833, dtype: int64, \n",
+      " \n",
+      " Price\n",
+      "36.06    145103\n",
+      "36.23    128678\n",
+      "35.77    110964\n",
+      "35.54    107444\n",
+      "35.37     99558\n",
+      "          ...  \n",
+      "45.47         3\n",
+      "46.40         3\n",
+      "13.21         2\n",
+      "46.90         2\n",
+      "36.19         1\n",
+      "Name: count, Length: 279, dtype: int64, \n",
+      " \n",
+      " Margin\n",
+      "9.84     78362\n",
+      "9.36     69146\n",
+      "9.41     64517\n",
+      "9.53     63189\n",
+      "12.48    60411\n",
+      "         ...  \n",
+      "8.45         1\n",
+      "29.69        1\n",
+      "12.09        1\n",
+      "8.09         1\n",
+      "12.80        1\n",
+      "Name: count, Length: 483, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "sku = sellin_total.Sku.value_counts()\n",
-    "date = sellin_total.Date.value_counts()\n",
-    "storeid = sellin_total.Store_Id.value_counts()\n",
-    "pieces = sellin_total.Pieces.value_counts()\n",
-    "price = sellin_total.Price.value_counts()\n",
-    "margin = sellin_total.Margin.value_counts()\n",
-    "print(sku, date, storeid, pieces, price, margin)"
+    "sku = sellin_total.Sku.sort_values().value_counts()\n",
+    "date = sellin_total.Date.sort_values().value_counts()\n",
+    "storeid = sellin_total.Store_Id.sort_values().value_counts()\n",
+    "pieces = sellin_total.Pieces.sort_values().value_counts()\n",
+    "price = sellin_total.Price.sort_values().value_counts()\n",
+    "margin = sellin_total.Margin.sort_values().value_counts()\n",
+    "print(f\"{sku},\\n \\n {date}, \\n \\n {storeid}, \\n \\n {pieces}, \\n \\n {price}, \\n \\n {margin}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Sku        Date  Store_Id  Pieces  Price  Margin\n",
+      "24       4220015  02/01/2015      1161     0.0  12.59    9.36\n",
+      "136      4220015  02/01/2015      5843     0.0  12.72    9.49\n",
+      "171      4220015  03/01/2015      1202     0.0  12.59    9.36\n",
+      "279      4220015  03/01/2015      4128     0.0  12.59    9.36\n",
+      "438      4220015  05/01/2015      5730     0.0  12.59    9.36\n",
+      "...          ...         ...       ...     ...    ...     ...\n",
+      "4188052  4829827  17/05/2017      2093     0.0  20.51   14.62\n",
+      "4188207  4829827  19/05/2017      3776     0.0  20.51   14.62\n",
+      "4188281  4829827  20/05/2017      3834     0.0  20.51   14.62\n",
+      "4188404  4829827  23/05/2017      3857     0.0  20.51   14.62\n",
+      "4188601  4829827  29/05/2017      1124     0.0  20.51   14.62\n",
+      "\n",
+      "[46950 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "condicion = sellin_total.Pieces == 0\n",
+    "print(sellin_total[condicion])\n"
    ]
   },
   {
